--- a/AppTFG/app/src/main/res/layout/activity_inicio.xml
+++ b/AppTFG/app/src/main/res/layout/activity_inicio.xml
@@ -1,82 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_gravity="center"
-    android:useDefaultMargins="true"
-    tools:context=".InicioActivity"
-    android:rowCount="5">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="25dp"
+    tools:context=".InicioActivity">
+
+
+        <View
+            android:id="@+id/or_line"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:background="@color/azul_electrico"
+            app:layout_constraintBottom_toBottomOf="@+id/o"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/o"/>
+
+        <TextView
+            android:id="@+id/o"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/white"
+            android:padding="8dp"
+            android:text="@string/o"
+            android:textAlignment="center"
+            android:textColor="@color/azul_electrico"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/signup_btn"
+            app:layout_constraintEnd_toEndOf="@+id/or_line"
+            app:layout_constraintStart_toStartOf="@+id/or_line"
+            app:layout_constraintTop_toBottomOf="@+id/login_btn" />
+
+        <Button
+            android:id="@+id/signup_btn"
+            style="@style/BotonPrincipal"
+            android:text="@string/signup"
+            app:layout_constraintBottom_toTopOf="@+id/guideline4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/o" />
+
+        <Button
+            android:id="@+id/login_btn"
+            style="@style/BotonPrincipal"
+            android:text="@string/login"
+            app:layout_constraintBottom_toTopOf="@+id/o"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_inicio_layout" />
 
         <TextView
             android:id="@+id/bienvenida_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="0"
+            android:layout_gravity="center"
             android:text="@string/bienvenida"
             android:textAlignment="center"
-            android:layout_gravity="center"
             android:textColor="@color/gris"
             android:textSize="50sp"
-            android:textStyle="bold" />
-
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/img_inicio_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline8" />
 
         <ImageView
-            android:id="@+id/inicio_img"
+            android:id="@+id/img_inicio_layout"
             android:layout_width="wrap_content"
-            android:layout_height="494dp"
-            android:layout_row="1"
-            android:layout_column="0"
+            android:layout_height="0dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/logo" />
+            android:src="@drawable/logo"
+            app:layout_constraintHeight_max="750dp"
+            app:layout_constraintBottom_toTopOf="@+id/login_btn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bienvenida_txt"
+            app:layout_constraintVertical_chainStyle="spread_inside"/>
 
-        <Button
-            android:id="@+id/login_btn"
-            style="@style/BotonPrincipal"
-            android:layout_width="@dimen/width_boton_principal"
-            android:layout_height="@dimen/height_boton_principal"
-            android:layout_row="2"
-            android:layout_column="0"
-            android:text="@string/login"/>
-
-        <Button
-            android:id="@+id/signup_btn"
-            style="@style/BotonPrincipal"
-            android:layout_width="@dimen/width_boton_principal"
-            android:layout_height="@dimen/height_boton_principal"
-            android:layout_row="4"
-            android:layout_column="0"
-            android:text="@string/signup" />
-
-        <View
-            android:id="@+id/or_line"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline8"
             android:layout_width="wrap_content"
-            android:layout_height="2dp"
-            android:layout_row="3"
-            android:layout_column="0"
-            android:layout_gravity="left"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="25dp"
-            android:layout_margin="6dp"
-            android:background="@color/azul_electrico" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.02" />
 
-        <TextView
-            android:id="@+id/o"
-            android:background="@color/white"
-            android:layout_row="3"
-            android:layout_column="0"
-            android:layout_gravity="center"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:text="@string/o"
-            android:textAlignment="center"
-            android:textColor="@color/azul_electrico"
-            android:textSize="20sp"
-            android:padding="8dp"
-            android:textStyle="bold"/>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.98" />
 
-</GridLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
