--- a/AppTFG/app/src/main/res/layout/catalogo_fragment.xml
+++ b/AppTFG/app/src/main/res/layout/catalogo_fragment.xml
@@ -1,61 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/catalogo_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/catalogo_fragment"
     tools:context=".ui.catalogo.CatalogoFragment">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_buscador"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:clickable="true"
+        android:padding="8dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="10dp"
+        android:layout_marginTop="15dp"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toTopOf="@+id/guideline11"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_marginTop="15dp"
-            android:padding="8dp"
-            app:cardElevation="10dp"
-            app:cardCornerRadius="20dp"
-            android:clickable="true">
-
-            <SearchView
-                android:id="@+id/sv_buscador"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:backgroundTint="#1B03DAC5"
-                android:textSize="30sp" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_catalogo"
+        <SearchView
+            android:id="@+id/sv_buscador"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginHorizontal="10dp"
-            android:padding="8dp"
-            tools:listitem="@layout/farmaco"
-            ></androidx.recyclerview.widget.RecyclerView>
-    </LinearLayout>
+            android:textSize="30sp" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_catalogo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guideline11"
+        tools:listitem="@layout/farmaco"></androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fab"
-        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:textStyle="bold"
-        android:padding="10dp"
         android:backgroundTint="@color/amarillo"
-        android:text="Añadir fármaco"
+        android:padding="10dp"
         android:textColor="@color/white"
         android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="invisible"
         app:elevation="20dp"
         app:icon="@drawable/ic_more"
         app:iconSize="35dp"
-        app:iconTint="@color/white" />
-</FrameLayout>
+        app:iconTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="64dp" />
+</androidx.constraintlayout.widget.ConstraintLayout>
