--- a/AppTFG/app/src/main/res/layout/farmaco.xml
+++ b/AppTFG/app/src/main/res/layout/farmaco.xml
@@ -1,84 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv_farmaco"
-    android:orientation="horizontal"
-    android:layout_margin="15dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="100dp"
-    app:cardElevation="10dp"
-    app:cardCornerRadius="20dp"
     >
 
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
         <LinearLayout
-            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_margin="10dp"
+            android:orientation="vertical"
+            android:paddingEnd="5dp">
 
-            <ImageView
-                android:id="@+id/img_farmaco"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:elevation="100dp"
-                android:src="@drawable/ic_farmaco"
-             />
-
-            <GridLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:columnCount="2"
                 android:rowCount="3">
-                <TextView
+
+                <ImageView
+                    android:id="@+id/img_farmaco"
+                    android:layout_width="70dp"
+                    android:layout_height="100dp"
+                    android:elevation="100dp"
+                    android:src="@drawable/ic_farmaco" />
+
+                <!--TextView
                     android:layout_width="match_parent"
                     android:layout_row="0"
-                    android:layout_column="0"/>
+                    android:layout_column="0" /-->
 
                 <TextView
                     android:id="@+id/tv_nombre_farmaco"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:text="Morfina"
-                    android:layout_row="1"
-                    android:layout_column="0"
                     android:layout_gravity="center_vertical"
-                    android:textSize="30sp" />
+                    android:autoSizeMaxTextSize="30sp"
+                    android:autoSizeTextType="uniform"
+                    android:text="Morfina"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
-                <GridLayout
-                    android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_row="2"
-                    android:layout_gravity="right"
-                    android:layout_column="0"
-                    android:columnCount="2">
+                    android:drawableStart="@drawable/ic_maximo"
+                    android:textAlignment="textEnd"
+                    android:textColor="@color/rojo"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_row="0"
-                        android:layout_column="0"
-                        android:text="Dosis máxima:"
-                        android:textAlignment="textEnd"
-                        android:textColor="@color/rojo"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/tv_dosis_maxima"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_row="0"
-                        android:layout_column="1"
-                        android:text="12 ug/día"
-                        android:textAlignment="textEnd"
-                        android:textColor="@color/rojo"
-                        android:textSize="20sp"/>
-                </GridLayout>
-            </GridLayout>
+                <TextView
+                    android:id="@+id/tv_dosis_maxima"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:autoSizeMaxTextSize="20dp"
+                    android:autoSizeTextType="uniform"
+                    android:text="12 ug/día"
+                    android:textAlignment="textEnd"
+                    android:textColor="@color/rojo"
+                    android:textSize="16sp" />
+            </LinearLayout>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
